mainfests/ingress-nginx/ingress-http/myapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-http-v1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-v1
      version: v1
  template:
    metadata:
      namespace: default
      labels:
        app: myapp-v1
        version: v1
    spec:
      containers:
      - name: myapp-v1
        image: ikubernetes/myapp:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-http-v2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-v2
      version: v2
  template:
    metadata:
      namespace: default
      labels:
        app: myapp-v2
        version: v2
    spec:
      containers:
      - name: myapp-v2
        image: ikubernetes/myapp:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
