mainfests/ingress-nginx/ingress-http/ingress-myapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-v1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp-v1.linux.io
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc-v1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-v2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp-v2.linux.io
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc-v2
          servicePort: 80
